# BathyReq

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  gh-pages.yml
bathyreq/: __init__.py  app.py  request.py  sources.py  visualize.py
bathyreq/sources/: __init__.py  blue_topo.py  factory.py  gebco.py  ncei.py  sources.py
docs/: mkdocs.yml  reference.md
docs/docs/: index.md  license.md
docs/docs/reference/: request.md  sources_bluetopo.md  sources_gebco.md  sources_ncei.md
docs/logo/: make.py  requirements.txt
docs/reference/: sources.md
docs/site/: 404.html  index.html  objects.inv
docs/site/reference/sources_bluetopo/: index.html
license/: index.html
logo/: logo.py
reference/request/: index.html
reference/sources/: index.html
reference/sources_bluetopo/: index.html
reference/sources_gebco/: index.html
reference/sources_ncei/: index.html
tests/: test_request.py
tests/sources/: test_gebco.py  test_ncei.py
tests/test_sources/: test_factory.py  test_gebco.py
